fix:alignment

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     font-size: 3rem;
-    margin: 3rem 1rem 2.5rem 1rem;
+    margin: 3rem 1rem 2.5rem 2rem;
   }
   
   .about {
